2nd training/Community/Community/Community1/force-app/main/default/objects/Operation_Order__c/fields/Signature__c.field-meta.xml
<CustomField>
    <fullName>Signature__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Signature 签收</label>
    <type>Checkbox</type>
</CustomField>