2nd training/Community/Community/Community1/force-app/main/default/objects/Operation_Order__c/fields/Special_Requests__c.field-meta.xml
<CustomField>
    <fullName>Special_Requests__c</fullName>
    <label>Special Requests</label>
    <type>TextArea</type>
</CustomField>