2nd training/Community/Community/Community1/force-app/main/default/objects/Operation_Order__c/fields/Storage_Room_No__c.field-meta.xml
<CustomField>
    <fullName>Storage_Room_No__c</fullName>
    <label>Storage Room No. 库房号</label>
    <length>30</length>
    <type>Text</type>
</CustomField>