2nd training/Community/Community/Community1/force-app/main/default/objects/Operation_Order__c/fields/Store_in__c.field-meta.xml
<CustomField>
    <fullName>Store_in__c</fullName>
    <label>Store in 储存在</label>
    <length>30</length>
    <type>Text</type>
</CustomField>