2nd training/Community/Community/Community1/force-app/main/default/objects/Operation_Order__c/fields/Take_off_labels__c.field-meta.xml
<CustomField>
    <fullName>Take_off_labels__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Remove old labels 除去原有标签</label>
    <type>Checkbox</type>
</CustomField>