2nd training/Community/Community/Community1/force-app/main/default/objects/Operation_Order__c/fields/Temp_Import_II__c.field-meta.xml
<CustomField>
    <fullName>Temp_Import_II__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Temp Import (II)</label>
    <type>Checkbox</type>
</CustomField>