2nd training/Community/Community/Community1/force-app/main/default/objects/Operation_Order__c/fields/Time__c.field-meta.xml
<CustomField>
    <fullName>Time__c</fullName>
    <label>Time</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>