2nd training/Community/Community/Community1/force-app/main/default/objects/Operation_Order__c/fields/Transfer__c.field-meta.xml
<CustomField>
    <fullName>Transfer__c</fullName>
    <label>Transfer 轉倉</label>
    <length>30</length>
    <type>Text</type>
</CustomField>