2nd training/Community/Community/Community1/force-app/main/default/objects/Operation_Order__c/fields/Truck__c.field-meta.xml
<CustomField>
    <fullName>Truck__c</fullName>
    <label>Truck</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>