2nd training/Community/Community/Community1/force-app/main/default/objects/Operation_Order__c/fields/Type_SG__c.field-meta.xml
<CustomField>
    <fullName>Type_SG__c</fullName>
    <description>For OOSG</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>WWI only</fullName>
            </value>
            <value>
                <fullName>OO only</fullName>
            </value>
            <value>
                <fullName>OO+WWI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>