2nd training/Community/Community/Community1/force-app/main/default/objects/Operation_Order__c/fields/Unpacking_WWI__c.field-meta.xml
<CustomField>
    <fullName>Unpacking_WWI__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Unpacking 拆货</label>
    <type>Checkbox</type>
</CustomField>