2nd training/Community/Community/Community1/force-app/main/default/objects/Operation_Order__c/fields/Update_Permit__c.field-meta.xml
<CustomField>
    <fullName>Update_Permit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Update Permit</label>
    <type>Checkbox</type>
</CustomField>