2nd training/Community/Community/Community1/force-app/main/default/objects/Operation_Order__c/fields/Viewing_Rm__c.field-meta.xml
<CustomField>
    <fullName>Viewing_Rm__c</fullName>
    <label>Viewing Rm</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ATL</fullName>
            </value>
            <value>
                <fullName>ATL (Main)</fullName>
            </value>
            <value>
                <fullName>MT Main</fullName>
            </value>
            <value>
                <fullName>MT Studio</fullName>
            </value>
            <value>
                <fullName>GG Front</fullName>
            </value>
            <value>
                <fullName>GG Main</fullName>
            </value>
            <value>
                <fullName>GG23</fullName>
                <label>GG 23</label>
            </value>
            <value>
                <fullName>Viewing Rm AS1</fullName>
            </value>
            <value>
                <fullName>Viewing Rm AS2</fullName>
            </value>
            <value>
                <fullName>Viewing Rm L2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>