2nd training/Community/Community/Community1/force-app/main/default/objects/Operation_Order__c/recordTypes/OO.recordType-meta.xml
<RecordType>
    <fullName>OO</fullName>
    <active>true</active>
    <label>OO</label>
</RecordType>