2nd training/Community/Community/Community1/force-app/main/default/objects/Operation_Order__c/recordTypes/OOBJ.recordType-meta.xml
<RecordType>
    <fullName>OOBJ</fullName>
    <active>true</active>
    <description>Operation Order for Beijing</description>
    <label>OOBJ</label>
</RecordType>