2nd training/Community/Community/Community1/force-app/main/default/objects/Operation_Order__c/recordTypes/OOHK.recordType-meta.xml
<RecordType>
    <fullName>OOHK</fullName>
    <active>true</active>
    <label>OOHK</label>
</RecordType>