2nd training/Community/Community/Community1/force-app/main/default/objects/Operation_Order__c/recordTypes/OOSG.recordType-meta.xml
<RecordType>
    <fullName>OOSG</fullName>
    <active>false</active>
    <label>OOSG</label>
</RecordType>