2nd training/Community/Community/Community1/force-app/main/default/objects/Operation_Order__c/recordTypes/OOSH.recordType-meta.xml
<RecordType>
    <fullName>OOSH</fullName>
    <active>true</active>
    <description>Operation Order for Shanghai</description>
    <label>OOSH</label>
</RecordType>