2nd training/Community/Community/Community1/force-app/main/default/objects/Operation_Order__c/recordTypes/RR.recordType-meta.xml
<RecordType>
    <fullName>RR</fullName>
    <active>false</active>
    <description>Resource Request</description>
    <label>RR</label>
</RecordType>