2nd training/Community/Community/Community1/force-app/main/default/objects/Operation_Order__c/recordTypes/WWI.recordType-meta.xml
<RecordType>
    <fullName>WWI</fullName>
    <active>true</active>
    <description>Warehouse Work Instruction</description>
    <label>WWI</label>
</RecordType>