2nd training/Community/Community/Community1/force-app/main/default/objects/Operation_Order__c/validationRules/Amount_and_Currency_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Amount_and_Currency_required</fullName>
    <active>true</active>
    <description>Amount_and_Currency_required IF True for pick list selection for Payment</description>
    <errorConditionFormula>AND(
(RecordTypeId = &apos;01220000000JT7d&apos;),
(TEXT(Payment__c) &lt;&gt; &quot;None&quot;),
OR (
ISBLANK( Currency__c  ),
ISBLANK( Amount__c ))
)

||

AND(
OR (
RecordTypeId = &apos;01220000000JSYX&apos;,
RecordTypeId = &apos;01220000000646u&apos;,
RecordTypeId = &apos;01220000000646p&apos;,
RecordTypeId = &apos;01220000000JSYc&apos;,
RecordTypeId = &apos;01220000000JSsi&apos;
),
TEXT(Payment__c) &lt;&gt; &quot;&quot;,
OR (
ISBLANK( Currency__c  ),
ISBLANK( Amount__c )))</errorConditionFormula>
    <errorDisplayField>Amount__c</errorDisplayField>
    <errorMessage>Amount and Currency required</errorMessage>
</ValidationRule>