2nd training/Community/Community/Community1/force-app/main/default/objects/Operation_Order__c/validationRules/Job_date_equalmore_today.validationRule-meta.xml
<ValidationRule>
    <fullName>Job_date_equalmore_today</fullName>
    <active>false</active>
    <description>Job date has to be equal to today or more than today</description>
    <errorConditionFormula>Date__c  &lt;=   TODAY()</errorConditionFormula>
    <errorMessage>Kindly check your job date.</errorMessage>
</ValidationRule>